Added DynamoDB setup with table configuration - Created API to save summarized articles to db - Created API to fetch all articles - Added pagination with base64-encoded cursors

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,12 @@ dotenv
 uvicorn
 langchain_community
 tqdm
-tranformers
+transformers
 langchain_huggingface
 aiofiles
 newspaper3k
 lxml[html_clean]
+boto3
+python-dotenv
+pydantic
+pydantic-settings
