--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ dotenv
 uvicorn
 langchain_community
 tqdm
-transformers
+transformers==4.35.2
 langchain_huggingface
 aiofiles
 newspaper3k
@@ -15,8 +15,8 @@ python-dotenv
 pydantic
 pydantic-settings
 chromadb
-sentence-transformers>=2.6.1
-huggingface-hub>=0.20.0
+sentence-transformers==2.6.0
+huggingface-hub==0.20.0
 torch
 ollama
 redis
@@ -26,3 +26,4 @@ llama-index-embeddings-huggingface
 tavily-python
 llama-index-tools-tavily-research
 llama-index-llms-ollama
+mangum
